--- a/homeworkcss.css
+++ b/homeworkcss.css
@@ -25,8 +25,7 @@
     border: 2px solid red;
     width: 400px;
     height: 150px;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 590px;
+    top:10px;
+    right:10px;
     
   }
